tests/parser/should_compile/appfix001.hs
-- Parsing the local 'alet' form

{-# LANGUAGE ApplicativeFix #-}

module ShouldCompile

alet a = undefined
     b = undefined
  in a