tests/parser/should_fail/appfix003.hs
-- Parsing the local 'alet' form

{-# LANGUAGE ApplicativeFix #-}

module ShouldCompile where

foo = alet a :: t -> t
           a = undefined
           b = undefined
        in a
